# Burn-in-subtitle-checker

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/burnin_subtitle_checker/: __main__.py  cli.py  languages.py  media.py  models.py  ocr.py  reporting.py  scoring.py  transcription.py
tests/: test_cli.py  test_languages.py  test_media.py  test_ocr.py  test_scoring_reporting.py  test_transcription.py
