[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "burnin-subtitle-checker"
version = "0.2.0"
description = "Audio and burned-in subtitle mismatch checker for English, Hindi, Kannada, Tamil, and Telugu video QA."
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
    "imageio-ffmpeg>=0.5.1",
    "opencv-python>=4.8",
    "pytesseract>=0.3.10",
    "rapidfuzz>=3.5",
    "yt-dlp>=2025.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
subtitle-checker = "burnin_subtitle_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
